Api to get validators group map
