# config/swagger.json
@@ -2312,6 +2312,31 @@
                 }
             }
         },
+        "/statistics/validators/group_map": {
+            "get": {
+                "tags": [
+                    "statistics"
+                ],
+                "summary": "get list of validators for group map",
+                "description": "",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/statistics/validators/{operator_address}": {
             "get": {
                 "tags": [
